@@ -35,6 +35,7 @@ package org.opensearch.bootstrap;
 import org.opensearch.test.OpenSearchTestCase;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -80,7 +81,7 @@ public class SecurityTests extends OpenSearchTestCase {
     public void testProcessExecution() throws Exception {
         assumeTrue("test requires security manager", System.getSecurityManager() != null);
         try {
-            Runtime.getRuntime().exec("ls");
+            Runtime.getRuntime().exec(new String[] { "ls" });
             fail("didn't get expected exception");
         } catch (SecurityException expected) {}
     }
@@ -89,15 +90,15 @@ public class SecurityTests extends OpenSearchTestCase {
     public void testReadPolicyWithCodebases() throws IOException {
         final Map<String, URL> codebases = Map.of(
             "test-netty-tcnative-boringssl-static-2.0.61.Final-linux-x86_64.jar",
-            new URL("file://test-netty-tcnative-boringssl-static-2.0.61.Final-linux-x86_64.jar"),
+            URI.create("file://test-netty-tcnative-boringssl-static-2.0.61.Final-linux-x86_64.jar").toURL(),
             "test-kafka-server-common-3.6.1.jar",
-            new URL("file://test-kafka-server-common-3.6.1.jar"),
+            URI.create("file://test-kafka-server-common-3.6.1.jar").toURL(),
             "test-kafka-server-common-3.6.1-test.jar",
-            new URL("file://test-kafka-server-common-3.6.1-test.jar"),
+            URI.create("file://test-kafka-server-common-3.6.1-test.jar").toURL(),
             "test-lucene-core-9.11.0-snapshot-8a555eb.jar",
-            new URL("file://test-lucene-core-9.11.0-snapshot-8a555eb.jar"),
+            URI.create("file://test-lucene-core-9.11.0-snapshot-8a555eb.jar").toURL(),
             "test-zstd-jni-1.5.6-1.jar",
-            new URL("file://test-zstd-jni-1.5.6-1.jar")
+            URI.create("file://test-zstd-jni-1.5.6-1.jar").toURL()
         );
 
         AccessController.doPrivileged(
